# fastgmad

./: Cargo.toml  README.md
.github/workflows/: build.yml
fastgmad-bin/: Cargo.toml
fastgmad-bin/src/: main.rs  usage.txt
fastgmad-lib/: Cargo.toml
fastgmad-lib/src/: error.rs  lib.rs  util.rs
fastgmad-lib/src/extract/: mod.rs
