[package]
name = "fastgmad-bin"
version = "0.2.3"
edition = "2021"
authors = ["William Venner, VermeilChan"]
license = "MIT OR Apache-2.0"
description = "Fast gmad implementation"
repository = "https://github.com/VermeilChan/fastgmad"
publish = false

[features]
default = ["binary"]
binary = []

[[bin]]
name = "fastgmad"
path = "src/main.rs"

[dependencies]
fastgmad = { path = "../fastgmad-lib", features = ["binary"] }
log = "0.4.22"