[package]
name = "fastgmad"
version = "0.3.1"
edition = "2021"
authors = ["William Venner, VermeilChan"]
license = "MIT OR Apache-2.0"
description = "Fast gmad implementation"
repository = "https://github.com/VermeilChan/fastgmad"

[features]
binary = ["dep:libloading", "dep:ctrlc"]

[dependencies]
walkdir = "2.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
memchr = "2.7.4"
byteorder = "1.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
log = "0.4.22"
thiserror = "1.0.63"

ctrlc = { version = "3.4.5", optional = true }
libloading = { version = "0.8.5", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["stringapiset"] }

[dev-dependencies]
lazy_static = "1.5.0"
sysreq = "0.1.6"
zip = "2.2.0"
